--- a/pizzaroulette2/package.json
+++ b/pizzaroulette2/package.json
@@ -11,7 +11,7 @@
         "url": "git+https://github.com/xCE3/pizzaroulette2.git"
     },
     "keywords": [],
-    "author": "CJ R. <cj@null.computer> (https://w3cj.now.sh)",
+    "author": "CE3. <charlesedwards153@rocketmail.com> (https://w3cj.now.sh)",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/xCE3/pizzaroulette2/issues"
